# code-ranker

./: .markdownlint-cli2.jsonc  Cargo.toml  Makefile  README.md  code-ranker.toml  code-split.toml  dist-workspace.toml  package-lock.json  package.json  plan.md  pyproject.toml
contrib/: ci.md  (+3 more)
crates/code-ranker-cli/: Cargo.toml  build.rs
crates/code-ranker-cli/src/: analyze.rs  analyze_test.rs  check.rs  check_test.rs  cli.rs  compose.rs  compose_test.rs  docs.rs  docs_test.rs  export.rs  logger.rs  main.rs  pipeline.rs  pipeline_test.rs  recommend.rs  recommend_test.rs  report.rs  report_test.rs  templates.rs  templates_test.rs
crates/code-ranker-cli/src/check/: sarif.rs  values.rs
crates/code-ranker-cli/src/config/: defaults.toml  ignore.rs  load.rs  load_test.rs  metrics.rs  mod.rs  model.rs  model_test.rs  rules.rs  rules_test.rs  thresholds.rs  thresholds_test.rs  violations.rs  violations_test.rs
crates/code-ranker-cli/src/config/load/: overrides.rs
crates/code-ranker-cli/src/pipeline/: assemble.rs  helpers.rs
crates/code-ranker-cli/src/plugin/: mod.rs  mod_test.rs  resolve.rs
crates/code-ranker-cli/src/recommend/: prompt.rs  scorecard.rs
crates/code-ranker-cli/tests/: e2e.rs  grammar_single_version.rs
crates/code-ranker-ecmascript-core/: Cargo.toml
crates/code-ranker-ecmascript-core/src/: ecmascript_ts.rs  lib.rs  metrics_tests.rs
crates/code-ranker-plugin-api/: Cargo.toml
crates/code-ranker-plugin-api/src/: level.rs  lib.rs  list_override.rs  list_override_test.rs  log.rs  plugin.rs  preset.rs  report.rs  toml_merge.rs
crates/code-ranker-plugin-typescript/: Cargo.toml
crates/code-ranker-plugin-typescript/sample/: code-ranker-check.sarif  code-ranker-report.json
crates/code-ranker-plugin-typescript/src/: lib.rs
crates/code-ranker-plugins/: Cargo.toml
crates/code-ranker-plugins/src/: config.rs  defaults.toml  lib.rs  list_override.rs  test_support.rs  walk.rs
crates/code-ranker-plugins/src/config/: lookup.rs  mod.rs  parse.rs  specs.rs  views.rs
crates/code-ranker-plugins/src/engine/: core.rs  loc.rs  mod.rs  roles.rs  structural.rs
crates/code-ranker-plugins/src/languages/: mod.rs
crates/code-ranker-plugins/src/languages/c/: config.toml  dialect.rs  mod.rs
crates/code-ranker-plugins/src/languages/c/tests/: dialect.rs  mod_rs.rs
crates/code-ranker-plugins/src/languages/c/tests/sample/: code-ranker-check.sarif  code-ranker-report.json  code-ranker.toml  main.c  mathx.c  mathx.h  util.c  util.h
crates/code-ranker-plugins/src/languages/cfamily/: config.toml  mod.rs
crates/code-ranker-plugins/src/languages/cfamily/tests/: mod_rs.rs
crates/code-ranker-plugins/src/languages/cpp/: config.toml  dialect.rs  mod.rs
crates/code-ranker-plugins/src/languages/cpp/tests/: dialect.rs  mod_rs.rs
crates/code-ranker-plugins/src/languages/cpp/tests/sample/: code-ranker-report.json  code-ranker.toml  main.cpp  mathx.cpp  mathx.hpp  util.cpp  util.hpp
crates/code-ranker-plugins/src/languages/csharp/: config.toml  dialect.rs  mod.rs  structure.rs
crates/code-ranker-plugins/src/languages/csharp/tests/: dialect.rs  mod_rs.rs  structure.rs
crates/code-ranker-plugins/src/languages/csharp/tests/sample/: Main.cs  Mathx.cs  Util.cs  code-ranker-report.json  code-ranker.toml
crates/code-ranker-plugins/src/languages/ecmascript/: config.toml  imports.rs  mod.rs  structure.rs
crates/code-ranker-plugins/src/languages/ecmascript/tests/: dialect.rs  structure.rs
crates/code-ranker-plugins/src/languages/go/: config.toml  dialect.rs  mod.rs  structure.rs
crates/code-ranker-plugins/src/languages/go/tests/: dialect.rs  mod_rs.rs  structure.rs
crates/code-ranker-plugins/src/languages/javascript/: mod.rs
crates/code-ranker-plugins/src/languages/javascript/tests/: mod_rs.rs
crates/code-ranker-plugins/src/languages/js/: config.toml  mod.rs
crates/code-ranker-plugins/src/languages/js/tests/: mod_rs.rs
crates/code-ranker-plugins/src/languages/markdown/: config.toml  mod.rs  structure.rs
crates/code-ranker-plugins/src/languages/markdown/tests/: mod_rs.rs  structure.rs
crates/code-ranker-plugins/src/languages/md/: config.toml  mod.rs
crates/code-ranker-plugins/src/languages/md/tests/: mod_rs.rs  structure.rs
crates/code-ranker-plugins/src/languages/python/: config.toml  mod.rs  structure.rs
crates/code-ranker-plugins/src/languages/python/tests/: dialect.rs  mod_rs.rs  structure.rs
crates/code-ranker-plugins/src/languages/rust/: collapse.rs  config.toml  crate_graph.rs  internal.rs  mod.rs  module_graph.rs
crates/code-ranker-plugins/src/languages/rust/module_graph/: walk.rs
crates/code-ranker-plugins/src/languages/rust/tests/: dialect.rs  mod_rs.rs  resolve.rs  walk.rs
crates/code-ranker-plugins/src/languages/ts/: config.toml  mod.rs
crates/code-ranker-plugins/src/languages/ts/tests/: mod_rs.rs
crates/code-ranker-plugins/src/languages/typescript/: mod.rs
crates/code-ranker-plugins/src/languages/typescript/tests/: mod_rs.rs
crates/code-ranker-plugins/src/tests/: config.rs  list_override.rs  walk.rs
crates/code-ranker-test-support/: Cargo.toml
crates/code-ranker-test-support/src/: lib.rs
crates/code-split-complexity/: Cargo.toml
crates/code-split-complexity/examples/: bench.rs  debug_spaces.rs
crates/code-split-complexity/src/: lib.rs
crates/code-split-graph/: Cargo.toml
crates/code-split-graph/src/: cycles.rs  diff.rs  finalize.rs  hk.rs  level_graph.rs  lib.rs  snapshot.rs  stats.rs
crates/code-split-plugin-api/: Cargo.toml
crates/code-split-plugin-api/src/: attrs.rs  edge.rs  level.rs  lib.rs  plugin.rs
crates/code-split-plugin-python/: Cargo.toml
crates/code-split-plugin-python/sample/: code-split-report.json
crates/code-split-plugin-python/sample/pkg/: __init__.py
crates/code-split-plugin-python/src/: lib.rs
crates/code-split-plugin-typescript/: Cargo.toml
crates/code-split-plugin-typescript/sample/: code-split-report.json
crates/code-split-plugin-typescript/src/: lib.rs
samples/rust/: Cargo.toml  code-split-report.json  code-split.toml
samples/rust/src/: b.rs  foo.rs  lib.rs
(+349 files in other folders)
