[package]
name = "code-ranker-plugin-typescript"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Code Ranker TypeScript plugin: tree-sitter over .ts/.tsx, sharing the ECMAScript engine (code-ranker-ecmascript-core) with the JavaScript plugin as a peer."
# The e2e fixture project ships next to src/ but is not part of the published crate.
exclude = ["sample"]

[dependencies]
code-ranker-plugin-api = { workspace = true }
code-ranker-ecmascript-core = { workspace = true }
anyhow = { workspace = true }
tree-sitter-typescript = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
# Path-only (no version): cargo strips it from the published manifest.
code-ranker-test-support = { path = "../code-ranker-test-support" }
