[package]
name = "code-split-plugin-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Code Split plugin contract: the generic entity/relation model + the LanguagePlugin trait. Zero dependency on other code-split crates."

# IMPORTANT: this crate is the FOUNDATION. It must NOT depend on any other
# code-split crate, and it re-exports nothing — everyone else depends on it.
[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
