# Standalone workspace so this fixture is independent of the repo's root
# workspace (otherwise `cargo metadata` refuses to run here).
[workspace]

[package]
name = "rust-sample"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
# `serde` is referenced through a real `use` (and a derive) → DETECTED as External.
serde = { version = "1", features = ["derive"] }
# `once_cell` is referenced ONLY via a fully-qualified path, with no `use`
# statement → NOT detected (blind spot). It must not show up as an External node.
once_cell = "1"
